--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<a href="http://dukesrg.no-ip.org/3ds/go/?rxTools.dat"> rxTools (alt) </a><br>
 		<a href="http://www.reboot.ms/3ds/"> ReB00t (Similar website, basically boots anything) </a>
 	<p>
-		If you have any recommendations or questions, feel free to go <a href="http://google.com">here</a> and I'll be sure to answer, as I'm on gbaTEMP almost every day.<br>Note that this is not the optimal way to boot anything, and should not be used as a reliable exploit.
+		If you have any recommendations or questions, feel free to go <a href="https://gbatemp.net/threads/release-ish-3dboot-an-all-in-one-boot-website.410158/">here</a> and I'll be sure to answer, as I'm on gbaTEMP almost every day.<br>Note that this is not the optimal way to boot anything, and should not be used as a reliable exploit.
 	</p>
 </body>
 </html>
