--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
 	<title> 3DBoot, by kje123 </title>
 </head>
+<style>
+	p {text-align:center;}
+	h1 {text-align:center;}
+	h2 {text-align:center;}
+	body {background-color: #3FCBEA;}
+	p {color: white;}
+	h1 {color:white;}
+	h2 {color:white;}
+	p {font-family:arial;}
+	h1 {font-family:arial;}
+	h2 {font-family:arial;}
+	a:link    {color:white; background-color:transparent; text-decoration:none}
+	a:visited {color:black; background-color:transparent; text-decoration:none}
+</style>
 <body>
 	<h1>
-		"3DBoot, what is it?"
+		<img src="http://i.imgur.com/zO1blQ2.jpg" alt="3DB00t.logo">
+		<br>
+		"3DBoot? What is this wizardry?!"
 	</h1>
 	<p>
 		3DBoot is a small project that I decided to make to test my knowledge on HTML, as I'm just beginning to learn.
@@ -26,7 +42,7 @@
 		<a href="http://dukesrg.no-ip.org/3ds/go/?rxTools.dat"> rxTools (alt) </a><br>
 		<a href="http://www.reboot.ms/3ds/"> ReB00t (Similar website, basically boots anything) </a>
 	<p>
-		If you have any recommendations or questions, feel free to go <a href="https://gbatemp.net/threads/release-ish-3dboot-an-all-in-one-boot-website.410158/">here</a> and I'll be sure to answer, as I'm on gbaTEMP almost every day.<br>Note that this is not the optimal way to boot anything, and should not be used as a reliable exploit.
+		If you have any recommendations or questions, feel free to go <a href="http://google.com">here</a> and I'll be sure to answer, as I'm on gbaTEMP almost every day.<br>Note that this is not the optimal way to boot anything, and should not be used as a reliable exploit.
 	</p>
 </body>
 </html>
