--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </style>
 <body>
 	<h1>
-		<img src="http://i.imgur.com/zO1blQ2.jpg" alt="3DB00t.logo">
+		<img src="http://i.imgur.com/zO1blQ2.jpg" alt="3DB00t.logo" style="width:400px;height:200px;">
 		<br>
 		"3DBoot? What is this wizardry?!"
 	</h1>
@@ -35,14 +35,18 @@
 	</h2>
 
 	<p>
+		<font size=5>
 		<a href="http://yls8.mtheall.com/3dsbrowserhax_auto.php"> Browserhax </a><br>
 		<a href="http://go.gateway-3ds.com/"> Gateway/EmuNAND9/Decrypt9WIP </a><br>
 		<a href="http://is.gd/loade9/"> EmuNAND9/Decrypt9WIP (alt) </a><br>
 		<a href="https://dukesrg.github.io/?rxTools/sys/code.bin"> rxTools </a><br>
 		<a href="http://dukesrg.no-ip.org/3ds/go/?rxTools.dat"> rxTools (alt) </a><br>
-		<a href="http://www.reboot.ms/3ds/"> ReB00t (Similar website, basically boots anything) </a>
+		<a href="http://www.reboot.ms/3ds/"> ReB00t (Similar website, basically boots anything)</a>
+	</p>
+
 	<p>
-		If you have any recommendations or questions, feel free to go <a href="http://google.com">here</a> and I'll be sure to answer, as I'm on gbaTEMP almost every day.<br>Note that this is not the optimal way to boot anything, and should not be used as a reliable exploit.
+		<font size=3>
+		If you have any recommendations or questions, feel free to go <a href="https://gbatemp.net/threads/release-ish-3dboot-an-all-in-one-boot-website.410158/">here</a> and I'll be sure to answer, as I'm on gbaTEMP almost every day.<br>Note that this is not the optimal way to boot anything, and should not be used as a reliable exploit.
 	</p>
 </body>
 </html>
