--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	p {text-align:center;}
 	h1 {text-align:center;}
 	h2 {text-align:center;}
+	h3 {text-align:center;}
 	body {background-color: #3FCBEA;}
 	p {color: white;}
 	h1 {color:white;}
@@ -18,35 +19,38 @@
 	a:visited {color:black; background-color:transparent; text-decoration:none}
 </style>
 <body>
+	<h3>
+		<img src="http://i.imgur.com/deH9loP.png" alt="3DB00t.logo" style="width:400px;height:200px;"><br><br><br><br>
+	</h3>
+
+	<h2>
+		<img src="http://i.imgur.com/uPqCxL1.png">
+	</h2>
+
+	<p>
+		<a href="http://yls8.mtheall.com/3dsbrowserhax_auto.php"><img src="http://i.imgur.com/wNIyHG0.png"></a><br>
+		<a href="http://go.gateway-3ds.com/"><img src="http://i.imgur.com/ZFCmHi6.png"></a><br>
+		<a href="http://is.gd/loade9/"> <img src="http://i.imgur.com/NufDx4J.png"></a><br>
+		<a href="https://dukesrg.github.io/?rxTools/sys/code.bin"><img src="http://i.imgur.com/Aw14fCA.png"></a><br>
+		<a href="http://dukesrg.no-ip.org/3ds/go/?rxTools.dat"><img src="http://i.imgur.com/b5SImRS.png"></a><br>
+		<a href="http://www.reboot.ms/3ds/"><img src="http://i.imgur.com/TeMEgDB.png"></a>
+	</p>
+
+	<p>
+		<font size=3>
+		If you have any recommendations or questions, feel free to go <a href="https://gbatemp.net/threads/release-ish-3dboot-an-all-in-one-boot-website.410158/">here</a> and I'll be sure to answer,<br> as I'm on gbaTEMP almost every day.<br>Note that this is not the optimal way to boot anything, and should not be used as a reliable exploit.
+	</p>
+
 	<h1>
-		<img src="http://i.imgur.com/zO1blQ2.jpg" alt="3DB00t.logo" style="width:400px;height:200px;">
 		<br>
-		"3DBoot? What is this wizardry?!"
+		<img src="http://i.imgur.com/JMhOyNz.png">
 	</h1>
 	<p>
 		3DBoot is a small project that I decided to make to test my knowledge on HTML, as I'm just beginning to learn.
 	</p>
 	<p> 
-		 I was thinking "What could I make with basic code that would be helpful to others?" I decided on this. Essentially, this is a<br>webpage that redirects to exploits. (rxTools, browserhax, ect) I'm going to try to keep this as updated as possible. With this, you<br>should only need one bookmark on your 3DS that will boot anything you need! No more crowded bookmark page that you<br>have to search for to start rxTools! 
+		 I was thinking "What could I make with basic code that would be helpful<br> to others?" I decided on this. Essentially, this is a webpage that redirects<br> to exploits. (rxTools, browserhax, ect) I'm going to try to keep <br>this as updated as possible. With this, you should only need one bookmark on your 3DS that will <br>boot anything you need! No more crowded<br> bookmark page that you have to search for to start rxTools! 
 	</p>
 
-	<h2>
-		Exploits
-	</h2>
-
-	<p>
-		<font size=5>
-		<a href="http://yls8.mtheall.com/3dsbrowserhax_auto.php"> Browserhax </a><br>
-		<a href="http://go.gateway-3ds.com/"> Gateway/EmuNAND9/Decrypt9WIP </a><br>
-		<a href="http://is.gd/loade9/"> EmuNAND9/Decrypt9WIP (alt) </a><br>
-		<a href="https://dukesrg.github.io/?rxTools/sys/code.bin"> rxTools </a><br>
-		<a href="http://dukesrg.no-ip.org/3ds/go/?rxTools.dat"> rxTools (alt) </a><br>
-		<a href="http://www.reboot.ms/3ds/"> ReB00t (Similar website, basically boots anything)</a>
-	</p>
-
-	<p>
-		<font size=3>
-		If you have any recommendations or questions, feel free to go <a href="https://gbatemp.net/threads/release-ish-3dboot-an-all-in-one-boot-website.410158/">here</a> and I'll be sure to answer, as I'm on gbaTEMP almost every day.<br>Note that this is not the optimal way to boot anything, and should not be used as a reliable exploit.
-	</p>
 </body>
 </html>
