--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-<title>
-	shithole inc.
-</title>
 <head>
 	<link rel="stylesheet" href="style.css">
+	<title> shithole inc. </title>
 </head>
 <body>
 	
