--- a/liberty.html
+++ b/liberty.html
@@ -20,13 +20,19 @@
 	</p>
 	<br>
 	<h1>
+		What have they done?
+	</h1>
+	<p>
+		Well, besides the taxation of our fair people, the British have exploited our resources by leeching and never returning the favor, what with the regulations of trade that benefit only them. We have a right to govern out own trade, as we have lived here and created this colony with our bare hands! The fact that they tread on our rights that they <i> claim </i> to protect shows how much they dont care about us as a disciple or England, but rather a tool for their gain only! We will soon surpass Britain in both power and people, and we must take action before Britain gets the jump on <i> us </i> ! We will no longer be dragged into Britain's futile wars against the French and Spanish, as well. This will allow us to focus on making America a greater place, and become a real fighting power against the mighty British Empire! It is our moral authority to overthrow and conquer against the British, and finally set our own dominance to stop the King's abusive rule!
+	</p>
+	<h1>
 		So what can you do?
 	</h1>
 
 	<p>
 		Being people stricken by this horrid misrepresentation of our political significance, you can fight back against this tyranny and make sure you leave your footprint right into the king's arse! Join the uprising against England, and truly represent your freedom! Men, take part in becoming a revered minuteman, a soldier that will defend his rights on a minute's notice. Forget the taxes that the British claim we "owe" them, and save your shillings for local goods that supports America only! Never forget that even though you are but one, you are still a significant part of the revolution as a whole!
 	</p>
-	<br>
+	<br>	
 	<h1>
 		What are you waiting for, join the Revolution today!
 		<br>
