--- a/liberty.html
+++ b/liberty.html
@@ -37,4 +37,7 @@
 		What are you waiting for, join the Revolution today!
 		<br>
 		Seperated, we are forgotten; United,  we are unstoppable
+	</h1>
+	<br>
+	<img src="joinordie.png">
 </body>
