--- a/liberty.html
+++ b/liberty.html
@@ -39,5 +39,5 @@
 		Seperated, we are forgotten; United,  we are unstoppable
 	</h1>
 	<br>
-	<img src="joinordie.png" style="width:800px;height:600px; vertical-align:800px">
+	<img src="joinordie.png" style="width:800px;height:600px; text-align:800px">
 </body>
